// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseScoreDataDialog CourseMenu Menu renders correctly with courses 1`] = `
<div
  className="course-score-data-dialog"
>
  <div
    className="course-score-data-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mock-draft-id"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mock-title
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="course-score-data-dialog--body"
  >
    <mock-CSSTransition
      in={true}
      timeout={250}
    >
      <div
        className="course-score-data-list"
      >
        <div
          className="menu-expanded"
        >
          <div
            className="course-score-data-list--title"
          >
            <div>
              Available Courses
            </div>
            <div
              className="desc"
            >
              Recently Accessed First
            </div>
            <div
              className="course-search"
            >
              <div
                className="repository--nav--links--search is-empty"
              >
                <form>
                  <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search..."
                    type="search"
                    value=""
                  />
                  
                </form>
                <div
                  className="repository--nav--links--search--icon"
                >
                  <svg
                    viewBox="0 0 250.313 250.313"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="m244.19 214.6l-54.379-54.378c-0.289-0.289-0.628-0.491-0.93-0.76 10.7-16.231 16.945-35.66 16.945-56.554 0-56.837-46.075-102.91-102.91-102.91s-102.91 46.075-102.91 102.91c0 56.835 46.074 102.91 102.91 102.91 20.895 0 40.323-6.245 56.554-16.945 0.269 0.301 0.47 0.64 0.759 0.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.28-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              className="toggle-button"
              onClick={[Function]}
            >
              Toggle Navigation Menu
            </button>
          </div>
          
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 1
               (
              mock-course-1
              )
            </div>
            <div
              className="userCount"
            >
              10
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 21o 2023 - 9:33 AM
              </span>
            </div>
          </div>
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 2
               (
              mock-course-2
              )
            </div>
            <div
              className="userCount"
            >
              200
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 22o 2023 - 10:33 AM
              </span>
            </div>
          </div>
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 3
               (
              mock-course-3
              )
            </div>
            <div
              className="userCount"
            >
              3000
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 23o 2023 - 11:33 AM
              </span>
            </div>
          </div>
        </div>
        <div
          className="menu-collapsed"
        >
          <button
            className="toggle-button"
            onClick={[Function]}
          >
            Toggle Navigation Menu
          </button>
        </div>
      </div>
    </mock-CSSTransition>
    <div
      className="text-loader"
    >
      Select a Course to View Assessment Data
    </div>
  </div>
</div>
`;

exports[`CourseScoreDataDialog Modal renders correctly when history is loading 1`] = `
<div
  className="course-score-data-dialog"
>
  <div
    className="course-score-data-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mock-draft-id"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mock-title
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="course-score-data-dialog--body"
  >
    <div
      className="loading--container"
    >
      Loading courses...
    </div>
  </div>
</div>
`;

exports[`CourseScoreDataDialog Modal renders correctly when no course data 1`] = `
<div
  className="course-score-data-dialog"
>
  <div
    className="course-score-data-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mock-draft-id"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mock-title
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="course-score-data-dialog--body"
  >
    <mock-CSSTransition
      in={true}
      timeout={250}
    >
      <div
        className="course-score-data-list"
      >
        <div
          className="menu-expanded"
        >
          <div
            className="course-score-data-list--title"
          >
            <div>
              Available Courses
            </div>
            <div
              className="desc"
            >
              Recently Accessed First
            </div>
            <div
              className="course-search"
            >
              <div
                className="repository--nav--links--search is-empty"
              >
                <form>
                  <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search..."
                    type="search"
                    value=""
                  />
                  
                </form>
                <div
                  className="repository--nav--links--search--icon"
                >
                  <svg
                    viewBox="0 0 250.313 250.313"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="m244.19 214.6l-54.379-54.378c-0.289-0.289-0.628-0.491-0.93-0.76 10.7-16.231 16.945-35.66 16.945-56.554 0-56.837-46.075-102.91-102.91-102.91s-102.91 46.075-102.91 102.91c0 56.835 46.074 102.91 102.91 102.91 20.895 0 40.323-6.245 56.554-16.945 0.269 0.301 0.47 0.64 0.759 0.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.28-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              className="toggle-button"
              onClick={[Function]}
            >
              Toggle Navigation Menu
            </button>
          </div>
          <div
            className="no-courses-text"
          >
            No Courses Found
          </div>
        </div>
        <div
          className="menu-collapsed"
        >
          <button
            className="toggle-button"
            onClick={[Function]}
          >
            Toggle Navigation Menu
          </button>
        </div>
      </div>
    </mock-CSSTransition>
    <div
      className="text-loader"
    >
      Select a Course to View Assessment Data
    </div>
  </div>
</div>
`;

exports[`CourseScoreDataDialog Modal renders correctly with courses 1`] = `
<div
  className="course-score-data-dialog"
>
  <div
    className="course-score-data-dialog--header"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mock-draft-id"
        width="100%"
      />
    </div>
    <div
      className="title"
    >
      mock-title
    </div>
    <button
      aria-label="Close dialog"
      className="repository--button close-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="course-score-data-dialog--body"
  >
    <mock-CSSTransition
      in={true}
      timeout={250}
    >
      <div
        className="course-score-data-list"
      >
        <div
          className="menu-expanded"
        >
          <div
            className="course-score-data-list--title"
          >
            <div>
              Available Courses
            </div>
            <div
              className="desc"
            >
              Recently Accessed First
            </div>
            <div
              className="course-search"
            >
              <div
                className="repository--nav--links--search is-empty"
              >
                <form>
                  <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search..."
                    type="search"
                    value=""
                  />
                  
                </form>
                <div
                  className="repository--nav--links--search--icon"
                >
                  <svg
                    viewBox="0 0 250.313 250.313"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="m244.19 214.6l-54.379-54.378c-0.289-0.289-0.628-0.491-0.93-0.76 10.7-16.231 16.945-35.66 16.945-56.554 0-56.837-46.075-102.91-102.91-102.91s-102.91 46.075-102.91 102.91c0 56.835 46.074 102.91 102.91 102.91 20.895 0 40.323-6.245 56.554-16.945 0.269 0.301 0.47 0.64 0.759 0.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.28-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              className="toggle-button"
              onClick={[Function]}
            >
              Toggle Navigation Menu
            </button>
          </div>
          
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 1
               (
              mock-course-1
              )
            </div>
            <div
              className="userCount"
            >
              10
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 21o 2023 - 9:33 AM
              </span>
            </div>
          </div>
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 2
               (
              mock-course-2
              )
            </div>
            <div
              className="userCount"
            >
              200
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 22o 2023 - 10:33 AM
              </span>
            </div>
          </div>
          <div
            className="course-score-data-list--item"
            onClick={[Function]}
          >
            <div
              className="courseTitle"
            >
              Mock Course 3
               (
              mock-course-3
              )
            </div>
            <div
              className="userCount"
            >
              3000
               Learner
              s
            </div>
            <div
              className="accessed"
            >
              Last Accessed   
              <span
                className="timestamp"
              >
                Jun 23o 2023 - 11:33 AM
              </span>
            </div>
          </div>
        </div>
        <div
          className="menu-collapsed"
        >
          <button
            className="toggle-button"
            onClick={[Function]}
          >
            Toggle Navigation Menu
          </button>
        </div>
      </div>
    </mock-CSSTransition>
    <div
      className="text-loader"
    >
      Select a Course to View Assessment Data
    </div>
  </div>
</div>
`;
